# AdventOfCode2021

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
cpp/: CMakeLists.txt  Makefile  Makefile.clang  Makefile.msvc  README.md  cross-compile-linux-win32.cmake  cross-compile-linux-win64.cmake
cpp/src/: aoc2021.cpp  aocutil.cpp  aocutil.h  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp
cs/: Program.cs  README.md
cs/src/: DayBase.cs  day01.cs  day02.cs  day03.cs  day14.cs
input/: day13-input
py/: README.md  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24-2.py  day24-2a.py  day24-2b.py  day24-2c.py  day24.py  day25.py
rust/: Cargo.toml
rust/src/: main.rs
rust/src/solutions/: common.rs  day01.rs  day02.rs  day03.rs  day04.rs  mod.rs
ts/: README.md  package-lock.json  package.json  tsconfig.json
ts/src/: common.ts  day-factory.ts  day-runner.ts  day-template.ts  day01.ts  day02.ts  day03.ts  day04.ts  day05.ts  day06-org.ts  day06.ts  day07.ts  day08.ts  day09.ts  day10.ts  day11.ts  day12.ts  day13.ts  day14.ts  day15.ts  day16.ts  day17.ts  main.ts
